<resources>
    <string name="app_name">SpeedoMeter</string>

        <string name="max_speed">Max Speed</string>
        <string name="average_speed">Average Speed</string>
        <string name="distance">Distance</string>
        <string name="time">Time</string>
        <string name="accuracy">Accuracy</string>
        <string name="satellite">Satellites</string>

        <string name="waiting_for_fix">Waiting for GPS fix …</string>
        <string name="gps_disabled">GPS disabled</string>
        <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>

        <string name="running">Route in process…</string>
        <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

        <string name="settings">Settings</string>
        <string name="app_info">About this app</string>
        <string name="pref_auto_average">Automatically detect stop time.</string>
        <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>

        <string name="noti_id" translatable="false">Speedmeterisanid</string>

</resources>
