<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="@dimen/abc_action_bar_default_height_material">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/toolbarSpeed"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"
        android:background="@color/cyan"
        android:elevation="5dp">

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/progressBarCircularIndeterminate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:elevation="10dp" />

        <TextView
            android:id="@+id/currentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="100sp" />

    </RelativeLayout>


    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:onClick="onFabClick"
        android:src="@drawable/ic_action_play"
        fab:fab_colorNormal="@color/red"
        fab:fab_colorPressed="@color/red_light"
        fab:fab_colorRipple="@color/red_dark" />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:onClick="onRefreshClick"
        android:src="@drawable/ic_action_refresh"
        fab:fab_colorNormal="@color/red"
        fab:fab_colorPressed="@color/red_light"
        fab:fab_colorRipple="@color/red_dark"
        fab:fab_type="mini" />

    <TextView
        android:id="@+id/titleMaxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbarSpeed"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/max_speed"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toolbarSpeed"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/maxSpeed"
        android:layout_marginTop="16dp"
        android:background="@color/grey_lighter" />

    <TextView
        android:id="@+id/titleAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/separator1"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/average_speed"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/averageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator1"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/averageSpeed"
        android:layout_marginTop="16dp"
        android:background="@color/grey_lighter" />

    <TextView
        android:id="@+id/titleDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/separator2"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separator2"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/distance"
        android:layout_marginTop="16dp"
        android:background="@color/grey_lighter" />

    <TextView
        android:id="@+id/titleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/separator3"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Chronometer
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/separator3"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:id="@+id/separator4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/time"
        android:layout_marginTop="16dp"
        android:background="@color/grey_lighter" />

    <TextView
        android:id="@+id/titleAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/separator4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/accuracy"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/separator5"
        android:layout_alignTop="@+id/titleAccuracy"
        android:layout_marginEnd="20dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <View
        android:id="@+id/separator5"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_below="@+id/separator4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/grey_lighter" />

    <TextView
        android:id="@+id/titleSatellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/separator5"
        android:text="@string/satellite"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/titleSatellite"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <View
        android:id="@+id/separator6"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/satellite"
        android:layout_marginTop="16dp"
        android:background="@color/grey_lighter"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/waiting_for_fix"
        android:textColor="@color/grey_light"
        android:textSize="15sp" />

</RelativeLayout>